--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
+    "chalk": "^4.1.0",
+    "shellac": "^0.4.0",
+    "strip-indent": "^3.0.0",
+    "tmp-promise": "^3.0.2",
     "tslib": "^1"
   },
   "devDependencies": {
