--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "shellac": "^0.4.0",
     "strip-indent": "^3.0.0",
     "tmp-promise": "^3.0.2",
-    "tslib": "^1"
+    "tslib": "^1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
-    "@types/node": "^10",
+    "@types/node": "^12.12",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
@@ -27,7 +28,7 @@
     "typescript": "^3.3"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
   "files": [
     "/bin",
@@ -49,5 +50,5 @@
     "test": "echo NO TESTS",
     "version": "oclif-dev readme && git add README.md"
   },
-  "types": "lib/index.d.ts"
+  "types": "src/types/*.d.ts"
 }
