--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "declaration": true,
     "importHelpers": true,
     "module": "commonjs",
-    "outDir": "lib",
+    "outDir": "src/lib",
     "rootDir": "src",
     "strict": true,
     "target": "es2017",
     "esModuleInterop": true,
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
   ]
 }
