--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
     "test": "echo NO TESTS",
     "version": "oclif-dev readme && git add README.md"
-  }
+  },
+  "types": "lib/index.d.ts"
 }
